# wall-e-research

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTO_DETECTION_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DASHBOARD_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  LICENSE  Makefile  README.md  SECURITY_AUDIT_REPORT.md  WALL_E_TEST_SUITE_SUMMARY.md  alembic.ini  docker-compose.yml  postgres_verification_commands.sh  pyproject.toml  pytest.ini  repomix-output.xml  requirements-dev.txt  requirements.txt  session.key  setup_dashboard.sh  start_dashboard.sh  test_dashboard_functionality.html  test_dashboard_playwright.py
.claude/: settings.local.json
.claude/agents/: config-manager.md  database-architect.md  devops-deploy-specialist.md  nlp-fraud-detector.md  performance-optimizer.md  price-intelligence-analyst.md  security-compliance-auditor.md  technical-documentation-writer.md  test-automation-specialist.md  ux-dashboard-creator.md  web-scraper-security.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dashboard-ci.yml
alembic/: env.py
alembic/versions/: b50062a5f253_add_gdpr_compliance_features.py  ec05bd5d3888_initial_schema_creation.py
backups/code-snapshots/: repomix-research.xml
config/: base_config.yaml  compliance_overrides.yaml  config.example.yaml  price_analyzer.example.yaml  redis.conf  research_overrides.yaml
dashboard-simple/backend/: main.py
docs/: AUTO_DETECTION_SYSTEM.md  README.md  complete-sales-flow.md  conclusiones-gemini.md  conversation-system.md  development-setup.md  fase1-continuidad.md  fase1-resumen-final.md  installation.md  price-analysis-system.md  project-summary.md  real-example-iphone-sale.md  visual-flow-diagram.md
docs/ai-engine/: AI_ENGINE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md
docs/compliance/: COMPLIANCE_VALIDATION.md  GDPR_COMPLIANCE_GUIDE.md  LEGAL_DEPLOYMENT.md
docs/development/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  DEVELOPMENT_GUIDE.md
docs/getting-started/: INSTALLATION_GUIDE.md
docs/integration/: SUBAGENTS_USAGE_GUIDE.md
docs/operations/: CHANGELOG.md  CI_CD_SETUP.md  DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md
docs/project-reports/: CONFIGURATION_CLEANUP_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  README.md
docs/security/: FRAUD_DETECTION_GUIDE.md  LEGAL_COMPLIANCE.md  SECURITY_OVERVIEW.md
examples/: README.md  auto_detection_demo.py  create_dashboard_gif_demo.py  demo_complete_system.py  demo_price_analysis.py
frontend/: COMPONENT_USAGE_EXAMPLES.md  DASHBOARD_IMPROVEMENTS.md  README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccessibilityProvider.tsx  ActiveListings.tsx  AddProductDialog.tsx  AdvancedMetrics.tsx  AppBreadcrumb.tsx  AppSidebar.tsx  AutoDetectionPanel.tsx  AutomatedResponses.tsx  LoadingStates.tsx  NotificationCenter.tsx  QuickStats.tsx
frontend/src/hooks/: useAPI.ts  useWebSocket.ts
frontend/src/pages/: Analytics.tsx  Detection.tsx  Index.tsx  Messages.tsx  Notifications.tsx  Products.tsx
frontend/src/services/: api.ts
frontend/src/styles/: accessibility.css
repo-separation/: README-FINAL.md  README.md
repo-separation/configs/compliance/: config.compliance.yaml
repo-separation/scripts/: 01-create-repositories.sh  02-setup-git-workflow.sh  03-setup-cicd.sh  04-create-deployment.sh  05-setup-sync.sh
repo-separation/templates/: README-compliance.md  README-research.md
scripts/: create_dashboard_gif.py  create_gif_guide.sh  db_manager.py  happy_path_demo.py  init_database.py  init_db.sql  init_project.py  migrate_repositories.py  price_analysis_example.py  quick_start.py  run_performance_benchmark.py  scraper_24h_validator.py  setup_dev.py  setup_ollama.py  start_auto_detection.py  start_scraper.py  test_auto_detection.py  validate_compliance.py  validate_compliance_config.py  validate_config.py  validate_performance_setup.py
src/: _version.py  config_loader.py  enhanced_config_loader.py
src/ai_engine/: README.md  __init__.py  ai_engine.py  config.py  fallback_handler.py  llm_manager.py  performance_monitor.py  performance_tests.py  prompt_templates.py  response_generator.py  validator.py
src/api/: README.md  __init__.py  dashboard_routes.py  dashboard_server.py  requirements.txt
src/auto_detection/: __init__.py  detection_manager.py  notifications.py
src/bot/: compliance_bot.py  price_integration.py  wallapop_bot.py
src/conversation_engine/: engine.py
src/database/: README.md  __init__.py  config.py  db_manager.py  models.py  redis_manager.py
src/price_analyzer/: __init__.py  analyzer.py
src/price_analyzer/scrapers/: __init__.py  amazon_scraper.py  wallapop_scraper.py
src/scraper/: README.md  __init__.py  account_scanner.py  anti_detection.py  config.py  dynamic_config.py  error_handler.py  scraper_integration.py  session_manager.py  utils.py  wallapop_scraper.py
src/templates/: responses.json
tests/: README.md  __init__.py  conftest.py
tests/e2e/: test_complete_workflow.py
tests/fixtures/: test_responses.json
tests/integration/: simple_integration_test.py  test_ai_engine_integration.py  test_bot_ai_integration.py  test_happy_path.py  test_research_integration.py  test_scraper.py
tests/performance/: test_ai_engine_performance.py
tests/unit/: test_ai_engine_basic.py  test_config_system.py  test_conversation_engine.py  test_dashboard_api.py  test_dashboard_api_unit.py  test_price_analyzer.py  test_scraper_anti_detection.py
